added entities, application dbcontext, and repository interfaces and implementations

--- a/CleanArchitecture/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/CleanArchitecture/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArchitecture.Domain\CleanArchitecture.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
