added Data transfer objects for the entities

--- a/CleanArchitecture/CleanArchitecture.Application/CleanArchitecture.Application.csproj
+++ b/CleanArchitecture/CleanArchitecture.Application/CleanArchitecture.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
+    <Folder Include="Interfaces\Services\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
