fixed connection string and ran innitial migration

--- a/CleanArchitecture/CleanArchitecture.WebAPI/appsettings.json
+++ b/CleanArchitecture/CleanArchitecture.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Clean_Architecture_Db;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
